modified database user for connection

--- a/backend/app/.env
+++ b/backend/app/.env
@@ -1,7 +1,7 @@
 # .env
 # Variables para la conexión a la base de datos MariaDB
 
-DB_USER="backend_user"
+DB_USER="backend_app"
 DB_PASSWORD="Backapp@v1."
 DB_HOST="localhost"
 DB_PORT="3306"
